--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "loader-utils": "3.2.1",
     "typescript": "5.7.2"
   },
+  "overrides": {
+    "typescript": "$typescript"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
